cmake_minimum_required(VERSION 2.8)
project(DebuggableAMP)
find_package( OpenCV REQUIRED )
find_package( Eigen3 REQUIRED)
set(EIGEN_INCLUDE ${Eigen3_DIR}/../)
set (OPENMP_CXX_FLAG "/openmp")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OPENMP_CXX_FLAG}")
get_filename_component(HPC_Include "./include" ABSOLUTE)
get_filename_component(AlgorithmInc "./AlgorithmLib" ABSOLUTE)
get_filename_component(ResourceDir "./Resources" ABSOLUTE)
add_definitions(-DResourcePath="${ResourceDir}/")
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${EIGEN_INCLUDE})
include_directories(${HPC_Include})
add_subdirectory(AlgorithmLib)
add_subdirectory(Sample0)
add_subdirectory(Sample1)


export(PACKAGE DebuggableAMP)
configure_file(DebuggableAMPConfig.cmake.in "${PROJECT_BINARY_DIR}/DebuggableAMPConfig.cmake" @ONLY)